update layout, change title, fix bugs

--- a/index.html
+++ b/index.html
@@ -38,149 +38,149 @@
         <div
           class="track-card"
           data-track="assets/track1.m4a"
-          data-name="Whispers of the Heart"
+          data-name="Khamoshiyan"
         >
-          Whispers of the Heart
+          Khamoshiyan
         </div>
         <div
           class="track-card"
           data-track="assets/track2.m4a"
-          data-name="In Your Embrace"
+          data-name="Jee Le Zaraa"
         >
-          In Your Embrace
+          Jee Le Zaraa
         </div>
         <div
           class="track-card"
           data-track="assets/track3.m4a"
-          data-name="Dreams of Us"
+          data-name="Ami Je Tomar 3.0"
         >
-          Dreams of Us
+          Ami Je Tomar 3.0
         </div>
         <div
           class="track-card"
           data-track="assets/track4.m4a"
-          data-name="Softly Spoken"
+          data-name="Dil Ibaadat"
         >
-          Softly Spoken
+          Dil Ibaadat
         </div>
         <div
           class="track-card"
           data-track="assets/track5.m4a"
-          data-name="Endless Love"
+          data-name="Rozana"
         >
-          Endless Love
+          Rozana
         </div>
         <div
           class="track-card"
           data-track="assets/track6.m4a"
-          data-name="Unwritten Promises"
+          data-name="Tum Ho"
         >
-          Unwritten Promises
+          Tum Ho
         </div>
         <div
           class="track-card"
           data-track="assets/track7.m4a"
-          data-name="Falling for You"
+          data-name="Galliyan"
         >
-          Falling for You
+          Galliyan
         </div>
         <div
           class="track-card"
           data-track="assets/track8.m4a"
-          data-name="My Forever"
+          data-name="Teri Hogaiyaan"
         >
-          My Forever
+          Teri Hogaiyaan
         </div>
         <div
           class="track-card"
           data-track="assets/track9.m4a"
-          data-name="You and Me"
+          data-name="Kalank"
         >
-          You and Me
+          Kalank
         </div>
         <div
           class="track-card"
           data-track="assets/track10.m4a"
-          data-name="The First Touch"
+          data-name="Agar Tum Saath Ho"
         >
-          The First Touch
+          Agar Tum Saath Ho
         </div>
         <div
           class="track-card"
           data-track="assets/track11.m4a"
-          data-name="Echoes of You"
+          data-name="Kaun Tujhe"
         >
-          Echoes of You
+          Kaun Tujhe
         </div>
         <div
           class="track-card"
           data-track="assets/track12.m4a"
-          data-name="Starry Nights Together"
+          data-name="Perfect"
         >
-          Starry Nights Together
+          Perfect
         </div>
         <div
           class="track-card"
           data-track="assets/track13.m4a"
-          data-name="Secret Serenade"
+          data-name="Uska Hi Banana X Phir Mohabbat"
         >
-          Secret Serenade
+          Uska Hi Banana X Phir Mohabbat
         </div>
         <div
           class="track-card"
           data-track="assets/track14.m4a"
-          data-name="Timeless Magic"
+          data-name="Hum Tum"
         >
-          Timeless Magic
+          Hum Tum
         </div>
         <div
           class="track-card"
           data-track="assets/track15.m4a"
-          data-name="Only Yours"
+          data-name="Wo Lamhe Woh Baatein"
         >
-          Only Yours
+          Wo Lamhe Woh Baatein
         </div>
         <div
           class="track-card"
           data-track="assets/track16.m4a"
-          data-name="Hues of Love"
+          data-name="Hasi"
         >
-          Hues of Love
+          Hasi
         </div>
         <div
           class="track-card"
           data-track="assets/track17.m4a"
-          data-name="Golden Moments"
+          data-name="It's You"
         >
-          Golden Moments
+          It's You
         </div>
         <div
           class="track-card"
           data-track="assets/track18.m4a"
-          data-name="Scent of You"
+          data-name="Tu Jo Mila"
         >
-          Scent of You
+          Tu Jo Mila
         </div>
         <div
           class="track-card"
           data-track="assets/track19.m4a"
-          data-name="Our Little World"
+          data-name="Aaoge Jab Tum"
         >
-          Our Little World
+          Aaoge Jab Tum
         </div>
         <div
           class="track-card"
           data-track="assets/track20.m4a"
-          data-name="Chasing Stars with You"
+          data-name="Tum Mile"
         >
-          Chasing Stars with You
+          Tum Mile
         </div>
         <div
           class="track-card"
           data-track="assets/track21.m4a"
-          data-name="The Silent Song"
+          data-name="Ijazat"
         >
-          The Silent Song
+          Ijazat
         </div>
         <div
           class="track-card"
@@ -333,7 +333,10 @@
             >@alokkumar777</a
           >
         </p>
-        <p>&copy; 2025 MUSIC <i class="fa-solid fa-music"></i> App. All Rights Reserved.</p>
+        <p>
+          &copy; 2025 MUSIC <i class="fa-solid fa-music"></i>. All Rights
+          Reserved.
+        </p>
         <p>Version: 1.0.3</p>
       </footer>
     </div>
