update titles, version update 1.0.6

--- a/index.html
+++ b/index.html
@@ -185,86 +185,86 @@
         <div
           class="track-card"
           data-track="assets/track22.m4a"
-          data-name="Rhythm of Us"
+          data-name="Chahun Main Ya Naa"
         >
-          Rhythm of Us
+          Chahun Main Ya Naa
         </div>
         <div
           class="track-card"
           data-track="assets/track23.m4a"
-          data-name="Whispered Melodies"
+          data-name="Hawayein"
         >
-          Whispered Melodies
+          Hawayein
         </div>
         <div
           class="track-card"
           data-track="assets/track24.m4a"
-          data-name="Soulful Stares"
+          data-name="Kho Gaye Hum Kahan"
         >
-          Soulful Stares
+          Kho Gaye Hum Kahan
         </div>
         <div
           class="track-card"
           data-track="assets/track25.m4a"
-          data-name="Boundless Dreams"
+          data-name="Kya Hoti Hai Bewafai"
         >
-          Boundless Dreams
+          Kya Hoti Hai Bewafai
         </div>
         <div
           class="track-card"
           data-track="assets/track26.m4a"
-          data-name="Beyond the Words"
+          data-name="Tere Hawaale"
         >
-          Beyond the Words
+          Tere Hawaale
         </div>
         <div
           class="track-card"
           data-track="assets/track27.m4a"
-          data-name="Softly Yours"
+          data-name="Mockingbird"
         >
-          Softly Yours
+          Mockingbird
         </div>
         <div
           class="track-card"
           data-track="assets/track28.m4a"
-          data-name="Our Secret Universe"
+          data-name="Chaleya"
         >
-          Our Secret Universe
+          Chaleya
         </div>
         <div
           class="track-card"
           data-track="assets/track29.m4a"
-          data-name="Heartstrings Entwined"
+          data-name="Husn"
         >
-          Heartstrings Entwined
+          Husn
         </div>
         <div
           class="track-card"
           data-track="assets/track30.m4a"
-          data-name="The Warmth of Us"
+          data-name="Fanaa"
         >
-          The Warmth of Us
+          Fanaa
         </div>
         <div
           class="track-card"
           data-track="assets/track32.m4a"
-          data-name="Closer than Ever"
+          data-name="Ishq Wala Love"
         >
-          Closer than Ever
+          Ishq Wala Love
         </div>
         <div
           class="track-card"
           data-track="assets/track33.m4a"
-          data-name="A Thousand Smiles"
+          data-name="Mann Mera"
         >
-          A Thousand Smiles
+          Mann Mera
         </div>
         <div
           class="track-card"
           data-track="assets/track34.m4a"
-          data-name="Crimson Skies"
+          data-name="Sunn Raha Hai"
         >
-          Crimson Skies
+          Sunn Raha Hai
         </div>
         <div
           class="track-card"
@@ -276,23 +276,23 @@
         <div
           class="track-card"
           data-track="assets/track36.m4a"
-          data-name="Unfolding Us"
+          data-name="Satranga"
         >
-          Unfolding Us
+          Satranga
         </div>
         <div
           class="track-card"
           data-track="assets/track37.m4a"
-          data-name="The Glow Within"
+          data-name="Phir bhi Tumko Chaahungi"
         >
-          The Glow Within
+          Phir bhi Tumko Chaahungi
         </div>
         <div
           class="track-card"
           data-track="assets/track38.m4a"
-          data-name="The Language of Love"
+          data-name="Mehbooba"
         >
-          The Language of Love
+          Mehbooba
         </div>
       </main>
       <footer class="app-footer">
@@ -337,7 +337,7 @@
           &copy; 2025 MUSIC <i class="fa-solid fa-music"></i>. All Rights
           Reserved.
         </p>
-        <p>Version: 1.0.4</p>
+        <p>Version: 1.0.6</p>
       </footer>
     </div>
     <script src="script.js"></script>
