big update added Dark mode feature, update version 2.0.0

--- a/index.html
+++ b/index.html
@@ -269,16 +269,16 @@
         <div
           class="track-card"
           data-track="assets/track35.m4a"
-          data-name="Every Breath You Are"
+          data-name="Satranga"
         >
-          Every Breath You Are
+          Satranga
         </div>
         <div
           class="track-card"
           data-track="assets/track36.m4a"
-          data-name="Satranga"
+          data-name="Galliyan-II"
         >
-          Satranga
+          Galliyan-II
         </div>
         <div
           class="track-card"
