--- a/index.html
+++ b/index.html
@@ -37,259 +37,259 @@
       <main class="track-list">
         <div
           class="track-card"
-          data-track="assets/track1.m4a"
+          data-track="sounds/track1.m4a"
           data-name="Khamoshiyan"
         >
           Khamoshiyan
         </div>
         <div
           class="track-card"
-          data-track="assets/track2.m4a"
+          data-track="sounds/track2.m4a"
           data-name="Jee Le Zaraa"
         >
           Jee Le Zaraa
         </div>
         <div
           class="track-card"
-          data-track="assets/track3.m4a"
+          data-track="sounds/track3.m4a"
           data-name="Ami Je Tomar 3.0"
         >
           Ami Je Tomar 3.0
         </div>
         <div
           class="track-card"
-          data-track="assets/track4.m4a"
+          data-track="sounds/track4.m4a"
           data-name="Dil Ibaadat"
         >
           Dil Ibaadat
         </div>
         <div
           class="track-card"
-          data-track="assets/track5.m4a"
+          data-track="sounds/track5.m4a"
           data-name="Rozana"
         >
           Rozana
         </div>
         <div
           class="track-card"
-          data-track="assets/track6.m4a"
+          data-track="sounds/track6.m4a"
           data-name="Tum Ho"
         >
           Tum Ho
         </div>
         <div
           class="track-card"
-          data-track="assets/track7.m4a"
+          data-track="sounds/track7.m4a"
           data-name="Galliyan"
         >
           Galliyan
         </div>
         <div
           class="track-card"
-          data-track="assets/track8.m4a"
+          data-track="sounds/track8.m4a"
           data-name="Teri Hogaiyaan"
         >
           Teri Hogaiyaan
         </div>
         <div
           class="track-card"
-          data-track="assets/track9.m4a"
+          data-track="sounds/track9.m4a"
           data-name="Kalank"
         >
           Kalank
         </div>
         <div
           class="track-card"
-          data-track="assets/track10.m4a"
+          data-track="sounds/track10.m4a"
           data-name="Agar Tum Saath Ho"
         >
           Agar Tum Saath Ho
         </div>
         <div
           class="track-card"
-          data-track="assets/track11.m4a"
+          data-track="sounds/track11.m4a"
           data-name="Kaun Tujhe"
         >
           Kaun Tujhe
         </div>
         <div
           class="track-card"
-          data-track="assets/track12.m4a"
+          data-track="sounds/track12.m4a"
           data-name="Perfect"
         >
           Perfect
         </div>
         <div
           class="track-card"
-          data-track="assets/track13.m4a"
+          data-track="sounds/track13.m4a"
           data-name="Uska Hi Banana X Phir Mohabbat"
         >
           Uska Hi Banana X Phir Mohabbat
         </div>
         <div
           class="track-card"
-          data-track="assets/track14.m4a"
+          data-track="sounds/track14.m4a"
           data-name="Hum Tum"
         >
           Hum Tum
         </div>
         <div
           class="track-card"
-          data-track="assets/track15.m4a"
+          data-track="sounds/track15.m4a"
           data-name="Wo Lamhe Woh Baatein"
         >
           Wo Lamhe Woh Baatein
         </div>
         <div
           class="track-card"
-          data-track="assets/track16.m4a"
+          data-track="sounds/track16.m4a"
           data-name="Hasi"
         >
           Hasi
         </div>
         <div
           class="track-card"
-          data-track="assets/track17.m4a"
+          data-track="sounds/track17.m4a"
           data-name="It's You"
         >
           It's You
         </div>
         <div
           class="track-card"
-          data-track="assets/track18.m4a"
+          data-track="sounds/track18.m4a"
           data-name="Tu Jo Mila"
         >
           Tu Jo Mila
         </div>
         <div
           class="track-card"
-          data-track="assets/track19.m4a"
+          data-track="sounds/track19.m4a"
           data-name="Aaoge Jab Tum"
         >
           Aaoge Jab Tum
         </div>
         <div
           class="track-card"
-          data-track="assets/track20.m4a"
+          data-track="sounds/track20.m4a"
           data-name="Tum Mile"
         >
           Tum Mile
         </div>
         <div
           class="track-card"
-          data-track="assets/track21.m4a"
+          data-track="sounds/track21.m4a"
           data-name="Ijazat"
         >
           Ijazat
         </div>
         <div
           class="track-card"
-          data-track="assets/track22.m4a"
+          data-track="sounds/track22.m4a"
           data-name="Chahun Main Ya Naa"
         >
           Chahun Main Ya Naa
         </div>
         <div
           class="track-card"
-          data-track="assets/track23.m4a"
+          data-track="sounds/track23.m4a"
           data-name="Hawayein"
         >
           Hawayein
         </div>
         <div
           class="track-card"
-          data-track="assets/track24.m4a"
+          data-track="sounds/track24.m4a"
           data-name="Kho Gaye Hum Kahan"
         >
           Kho Gaye Hum Kahan
         </div>
         <div
           class="track-card"
-          data-track="assets/track25.m4a"
+          data-track="sounds/track25.m4a"
           data-name="Kya Hoti Hai Bewafai"
         >
           Kya Hoti Hai Bewafai
         </div>
         <div
           class="track-card"
-          data-track="assets/track26.m4a"
+          data-track="sounds/track26.m4a"
           data-name="Tere Hawaale"
         >
           Tere Hawaale
         </div>
         <div
           class="track-card"
-          data-track="assets/track27.m4a"
+          data-track="sounds/track27.m4a"
           data-name="Mockingbird"
         >
           Mockingbird
         </div>
         <div
           class="track-card"
-          data-track="assets/track28.m4a"
+          data-track="sounds/track28.m4a"
           data-name="Chaleya"
         >
           Chaleya
         </div>
         <div
           class="track-card"
-          data-track="assets/track29.m4a"
+          data-track="sounds/track29.m4a"
           data-name="Husn"
         >
           Husn
         </div>
         <div
           class="track-card"
-          data-track="assets/track30.m4a"
+          data-track="sounds/track30.m4a"
           data-name="Fanaa"
         >
           Fanaa
         </div>
         <div
           class="track-card"
-          data-track="assets/track32.m4a"
+          data-track="sounds/track32.m4a"
           data-name="Ishq Wala Love"
         >
           Ishq Wala Love
         </div>
         <div
           class="track-card"
-          data-track="assets/track33.m4a"
+          data-track="sounds/track33.m4a"
           data-name="Mann Mera"
         >
           Mann Mera
         </div>
         <div
           class="track-card"
-          data-track="assets/track34.m4a"
+          data-track="sounds/track34.m4a"
           data-name="Sunn Raha Hai"
         >
           Sunn Raha Hai
         </div>
         <div
           class="track-card"
-          data-track="assets/track35.m4a"
+          data-track="sounds/track35.m4a"
           data-name="Satranga"
         >
           Satranga
         </div>
         <div
           class="track-card"
-          data-track="assets/track36.m4a"
+          data-track="sounds/track36.m4a"
           data-name="Galliyan-II"
         >
           Galliyan-II
         </div>
         <div
           class="track-card"
-          data-track="assets/track37.m4a"
+          data-track="sounds/track37.m4a"
           data-name="Phir bhi Tumko Chaahungi"
         >
           Phir bhi Tumko Chaahungi
         </div>
         <div
           class="track-card"
-          data-track="assets/track38.m4a"
+          data-track="sounds/track38.m4a"
           data-name="Mehbooba"
         >
           Mehbooba
@@ -322,11 +322,11 @@
         </div>
         <p>
           <strong>Credits:</strong>
-          <!-- <br />
+          <br />
           Songs sung by:
           <a href="https://www.instagram.com/alliee_sings/" target="_blank"
             >@alliee_sings</a
-          > -->
+          >
           <br />
           Developed by:
           <a href="https://github.com/alokkumar777" target="_blank"
