Some modifications add icons and remove unnecessary animations

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
   </head>
   <body>
     <div class="app-container">
       <header class="app-header">
-        <h1>MUSIC <i class="fa-solid fa-music"></i></h1>
+        <h1>VOICE <i class="fa-solid fa-heart"></i></h1>
       </header>
       <div class="current-track">
         <p id="track-name">Select a track to play</p>
@@ -320,24 +321,24 @@
             value="0.5"
           />
         </div>
-        <p>
+        <p class="credits">
           <strong>Credits:</strong>
           <br />
           Songs sung by:
           <a href="https://www.instagram.com/alliee_sings/" target="_blank"
-            >@alliee_sings</a
+            >@alliee_sings <i class="fa-solid fa-moon"></i></a
           >
           <br />
           Developed by:
           <a href="https://github.com/alokkumar777" target="_blank"
-            >@alokkumar777</a
+            >@alokkumar777 <i class="fa-solid fa-code"></i></a
           >
         </p>
         <p>
-          &copy; 2025 MUSIC <i class="fa-solid fa-music"></i>. All Rights
+          &copy; 2025 VOICE <i class="fa-solid fa-heart"></i>. All Rights
           Reserved.
         </p>
-        <p>Version: 2.0.1</p>
+        <p>Version: 2.0.4</p>
       </footer>
     </div>
     <script src="script.js"></script>
