--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         border-top: 0;
         box-sizing: content-box;
         border-radius: 0 0 40% 40%;
-        -webkit-mask: linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
+        mask: linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
           linear-gradient(#000 0 0);
         -webkit-mask-composite: destination-out;
         mask-composite: exclude;
@@ -353,13 +353,13 @@
       <div class="contact-info">
         <p>If need urgent assistance? PLEASE DON'T CONTACT</p>
         <div class="social-links">
-          <a href="#" class="social-link disabled-link"
+          <a href="#" class="social-link"
             ><i class="fa-solid fa-envelope"></i
           ></a>
-          <a href="#" class="social-link disabled-link"
+          <a href="#" class="social-link"
             ><i class="fa-solid fa-phone"></i
           ></a>
-          <a href="#" class="social-link disabled-link"
+          <a href="#" class="social-link"
             ><i class="fa-solid fa-message"></i
           ></a>
         </div>
