--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neomorphic Music App</title>
+    <title>Voice🤍</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- <link rel="stylesheet" href="wave.css"> -->
     <!-- font awesome cdn -->
