--- a/index.html
+++ b/index.html
@@ -333,33 +333,27 @@
         <!-- From Uiverse.io by doniaskima -->
         <div class="loader"></div>
       </div>
-
-      <h1 class="btn-shine">Under Maintenance</h1>
-
+      <h1 class="btn-shine">Site Permanently Closed</h1>
       <p class="message">
-        I currently making some improvements to the website to serve you better.
-        Please check back soon!
+        This website has been permanently shut down and will not be returning.
+        Thank you to everyone who visited and supported this project.
       </p>
-
       <div class="progress-container">
-        <div class="progress-bar"></div>
+        <div class="progress-bar" style="width: 100%;"></div>
       </div>
-
       <p class="estimated-time">
-        Estimated completion:
-        <span id="countdown"><i class="fa-solid fa-question"></i></span>
+        Status: <span id="countdown">Permanently Offline</span>
       </p>
-
       <div class="contact-info">
-        <p>If need urgent assistance? PLEASE DON'T CONTACT</p>
+        <p>This site is no longer active. Thank you for your understanding.</p>
         <div class="social-links">
-          <a href="#" class="social-link"
+          <a href="#" class="social-link" style="opacity: 0.5; pointer-events: none;"
             ><i class="fa-solid fa-envelope"></i
           ></a>
-          <a href="#" class="social-link"
+          <a href="#" class="social-link" style="opacity: 0.5; pointer-events: none;"
             ><i class="fa-solid fa-phone"></i
           ></a>
-          <a href="#" class="social-link"
+          <a href="#" class="social-link" style="opacity: 0.5; pointer-events: none;"
             ><i class="fa-solid fa-message"></i
           ></a>
         </div>
