--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
       <div class="icon-container">
         <div class="loader"></div>
       </div>
-      <h1 class="btn-shine">We’ll Be Back Soon</h1>
+      <h1 class="btn-shine">We'll Be Back Soon</h1>
       <p class="message">
         Our website is currently undergoing scheduled maintenance to improve your experience.  
-        Please check back later — we’ll be up and running shortly.
+        Please check back later — we'll be up and running shortly.
       </p>
       <div class="progress-container">
         <div class="progress-bar" style="width: 100%;"></div>
