add year function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
   </head>
   <body>
     <div class="app-container">
@@ -326,17 +325,17 @@
           <br />
           Songs sung by:
           <a href="https://www.instagram.com/alliee_sings/" target="_blank"
-            >@alliee_sings <i class="fa-solid fa-moon"></i></a
-          >
+            >@alliee_sings <i class="fa-solid fa-moon"></i
+          ></a>
           <br />
           Developed by:
           <a href="https://github.com/alokkumar777" target="_blank"
-            >@alokkumar777 <i class="fa-solid fa-code"></i></a
-          >
+            >@alokkumar777 <i class="fa-solid fa-code"></i
+          ></a>
         </p>
         <p>
-          &copy; 2025 VOICE <i class="fa-solid fa-heart"></i>. All Rights
-          Reserved.
+          &copy; <span id="year"></span> VOICE
+          <i class="fa-solid fa-heart"></i>. All Rights Reserved.
         </p>
         <p>Version: 2.0.4</p>
       </footer>
